--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 env:
-  DOCKER_IMAGE_NAME: bonject.azurecr.io/campaign.api
+  DOCKER_IMAGE_NAME: 'bonject.azurecr.io/campaign.api'
 jobs:
 
   build:
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag '{{env.DOCKER_IMAGE_NAME}}':latest
+      run: docker build . --file Dockerfile --tag '${{env.DOCKER_IMAGE_NAME}}':latest
