--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,35 +10,32 @@ env:
   DOCKER_IMAGE_NAME: 'bonject.azurecr.io/campaign.api'
 
 jobs:
-
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v2
-
-    - name: 'Login via Azure CLI'
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: 'Build'
-      run: docker build . --file Dockerfile --tag '${{env.DOCKER_IMAGE_NAME}}':latest
-      working-directory: Bonject.Campaign.API
-
-    - name: 'Build and push it'
-      working-directory: Bonject.Campaign.API
-      run: |
-        docker build . --file Dockerfile --tag '${{env.DOCKER_IMAGE_NAME}}':latest
-        docker push '${{env.DOCKER_IMAGE_NAME}}':latest
+    build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
+        # checkout the repo
+        - name: 'Checkout GitHub Action'
+          uses: actions/checkout@master
+          
+        - name: 'Login via Azure CLI'
+          uses: azure/login@v1
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+        - uses: azure/docker-login@v1
+          with:
+            login-server: bonject.azurecr.io
+            username: ${{ secrets.REGISTRY_USERNAME }}
+            password: ${{ secrets.REGISTRY_PASSWORD }}
+        - run: |
+            docker build .t bonject.azurecr.io/campaign.api:latest
+            docker push bonject.azurecr.io/campaign.api:latest
 
     - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
           resource-group: BonjectContainers
-          image: '${{env.DOCKER_IMAGE_NAME}}':latest
+          image: ${{env.DOCKER_IMAGE_NAME}}:latest
           registry-username: ${{ secrets.REGISTRY_USERNAME }}
           registry-password: ${{ secrets.REGISTRY_PASSWORD }}
           name: bonject
