--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,9 @@ jobs:
             login-server: bonject.azurecr.io
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
+          working-directory: Bonject.Campaign.API
         - run: |
-            docker build .t bonject.azurecr.io/campaign.api:latest
+            docker build . -t bonject.azurecr.io/campaign.api:latest
             docker push bonject.azurecr.io/campaign.api:latest
 
         - name: 'Deploy to Azure Container Instances'
