--- a/.github/workflows/campaign.api.yml
+++ b/.github/workflows/campaign.api.yml
@@ -1,5 +1,5 @@
 on: [push]
-name: Linux_Container_Workflow
+name: 'Bonject.Campaign.API CI/CD'
 
 jobs:
     build-and-deploy:
@@ -25,14 +25,3 @@ jobs:
           run: |
             docker build . -t bonject.azurecr.io/campaign.api:latest
             docker push bonject.azurecr.io/campaign.api:latest
-
-        - name: 'Deploy to Azure Container Instances'
-          uses: 'azure/aci-deploy@v1'
-          with:
-            resource-group: BonjectContainers
-            dns-name-label: url-for-container
-            image: bonject.azurecr.io/campaign.api:latest
-            registry-username: ${{ secrets.REGISTRY_USERNAME }}
-            registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-            name: bonject
-            location: 'west us'
