--- a/.github/workflows/campaign.api.yml
+++ b/.github/workflows/campaign.api.yml
@@ -16,7 +16,7 @@ jobs:
         
         - uses: azure/docker-login@v1
           with:
-            login-server: bonject.azurecr.io
+            login-server: ${{ secrets.REGISTRY_SERVER }}
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
 
