--- a/.github/workflows/campaign.api.yml
+++ b/.github/workflows/campaign.api.yml
@@ -23,5 +23,5 @@ jobs:
         - name: 'Build and push'
           working-directory: Bonject.Campaign.API
           run: |
-            docker build . -t bonject.azurecr.io/campaign.api:latest
-            docker push bonject.azurecr.io/campaign.api:latest
+            docker build . -t ${{ secrets.REGISTRY_SERVER }}/campaign.api:latest
+            docker push ${{ secrets.REGISTRY_SERVER }}/campaign.api:latest
