--- a/Bonject.Campaign.Abstractions/Bonject.Campaign.Abstractions.csproj
+++ b/Bonject.Campaign.Abstractions/Bonject.Campaign.Abstractions.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign</RepositoryUrl>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
