--- a/Bonject.Campaign.API/Bonject.Campaign.API.csproj
+++ b/Bonject.Campaign.API/Bonject.Campaign.API.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bonject.Campaign.Abstractions" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
