--- a/Bonject.Campaign.Abstractions/Bonject.Campaign.Abstractions.csproj
+++ b/Bonject.Campaign.Abstractions/Bonject.Campaign.Abstractions.csproj
@@ -3,8 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign/Bonject.Campaign.Abstractions</RepositoryUrl>
     <Version>1.0.0</Version>
+    <Authors>Doug Simpson</Authors>
+    <Description>Represents campaign abstractions.</Description>
+    <Copyright>Copyright @ 2020</Copyright>
+    <PackageProjectUrl>https://github.com/Hammurabidoug/Bonject.Campaign</PackageProjectUrl>
+    <PackageIcon>hammurabi64.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="assets\hammurabi64.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
