--- a/.github/workflows/campaign.api.nuget.yml
+++ b/.github/workflows/campaign.api.nuget.yml
@@ -23,3 +23,8 @@ jobs:
       with:
           PROJECT_FILE_PATH: Bonject.Campaign.Abstractions/Bonject.Campaign.Abstractions.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+    - name: Publish Bonject.Campaign
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+          PROJECT_FILE_PATH: Bonject.Campaign/Bonject.Campaign.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
