--- a/Bonject.Campaign/Bonject.Campaign.csproj
+++ b/Bonject.Campaign/Bonject.Campaign.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign/Bonject.Campaign.Abstractions</RepositoryUrl>
-    <Version>1.0.2</Version>
+    <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign/Bonject.Campaign</RepositoryUrl>
+    <Version>1.0.0</Version>
     <Authors>Doug Simpson</Authors>
-    <Description>Represents campaign abstractions.</Description>
+    <Description>Represents campaign implementations.</Description>
     <Copyright>Copyright @ 2020</Copyright>
     <PackageProjectUrl>https://github.com/Hammurabidoug/Bonject.Campaign</PackageProjectUrl>
     <PackageIcon>hammurabi64.png</PackageIcon>
