--- a/.github/workflows/campaign.api.nuget.yml
+++ b/.github/workflows/campaign.api.nuget.yml
@@ -28,3 +28,8 @@ jobs:
       with:
           PROJECT_FILE_PATH: Bonject.Campaign/Bonject.Campaign.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+    - name: Publish Bonject.Campaign.DependencyInjection
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+          PROJECT_FILE_PATH: Bonject.Campaign.DependencyInjection/Bonject.Campaign.DependencyInjection.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
