--- a/Bonject.Campaign.DependencyInjection/Bonject.Campaign.DependencyInjection.csproj
+++ b/Bonject.Campaign.DependencyInjection/Bonject.Campaign.DependencyInjection.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign/Bonject.Campaign</RepositoryUrl>
-    <Version>1.0.1</Version>
+    <Version>1.0.0</Version>
     <Authors>Doug Simpson</Authors>
-    <Description>Represents campaign implementations.</Description>
+    <Description>Represents campaign dependency injection support.</Description>
     <Copyright>Copyright @ 2020</Copyright>
     <PackageProjectUrl>https://github.com/Hammurabidoug/Bonject.Campaign</PackageProjectUrl>
     <PackageIcon>hammurabi64.png</PackageIcon>
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bonject.Campaign" Version="1.0.0" />
     <PackageReference Include="Bonject.Campaign.Abstractions" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
   </ItemGroup>
 
 </Project>
