--- a/Bonject.Campaign/Bonject.Campaign.csproj
+++ b/Bonject.Campaign/Bonject.Campaign.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/Hammurabidoug/Bonject.Campaign/Bonject.Campaign</RepositoryUrl>
-    <Version>1.0.3</Version>
+    <VersionSuffix>1.0.1.$([System.DateTime]::UtcNow.ToString(mmff))</VersionSuffix>
+    <Version Condition=" '$(VersionSuffix)' == '' ">1.0.1.0</Version>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionSuffix)</Version>
     <Authors>Doug Simpson</Authors>
     <Description>Represents campaign implementations.</Description>
     <Copyright>Copyright @ 2020</Copyright>
