--- a/Bonject.Campaign.API/Bonject.Campaign.API.csproj
+++ b/Bonject.Campaign.API/Bonject.Campaign.API.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bonject.Campaign.Abstractions" Version="1.0.0" />
+    <PackageReference Include="Bonject.Campaign" Version="1.1.0" />
+    <PackageReference Include="Bonject.Campaign.DependencyInjection" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
